# goop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix  result  run-server.sh  style_guide.md
assets/: default_config.toml  index.html  sw.js
crates/goop-server/: Cargo.toml  build.rs
crates/goop-server/assets/: default_config.toml  fb.html  manifest.json  sw.js
crates/goop-server/src/: config.rs  events.rs  gui.rs  main.rs  memory.rs  model.rs  preamble.md  preamble.rs  push.rs  server.rs  session.rs  session_state.rs  terminal.rs
crates/goop-server/src/mcp/: manager.rs  mod.rs  proxy_tool.rs
crates/goop-server/src/memory/: compaction.rs  mod.rs  replay.rs  transaction_log.rs
crates/goop-server/src/prompts/: compaction.md  multi_tool_compact.md  tool_pair.md
crates/goop-server/src/tools/: computer.rs  mod.rs  restart.rs  ssh_tool.rs  web.rs
crates/goop-shared/: Cargo.toml
crates/goop-shared/src/: lib.rs
crates/goop-web/: Cargo.toml  index.html  leptos_style_guide.md  style.css
crates/goop-web/js/: stt.js
crates/goop-web/src/: app.rs  lib.rs  markdown.rs  pwa.rs  state.rs  stt.rs  ws.rs
crates/goop-web/src/components/: empty_state.rs  header.rs  input_bar.rs  input_button.rs  message.rs  message_log.rs  mod.rs  new_session_modal.rs  refresh_indicator.rs  select_bar.rs  session_list.rs  settings_modal.rs  swipe_sidebar.rs
docs/: compaction-redesign.md
scripts/: update-icon.py
src/: config.rs  events.rs  gui.rs  main.rs  memory.rs  model.rs  preamble.md  preamble.rs  push.rs  server.rs  session.rs  session_state.rs  ssh.rs  stt.rs  terminal.rs  tools.rs  transport.rs
src/tools/: file.rs  mod.rs  shell.rs  ssh_tool.rs  web.rs
