[package]
name = "goop"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.14.0"
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
axum-extra = "0.12"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3"
glob = "0.3.3"
gtk = { version = "0.18.2", features = ["v3_24"] }
html2text = "0.17.1"
log = "0.4"
reqwest = { version = "0.13.4", features = ["blocking"] }
rig = { version = "0.38", features = ["derive"] }
rig-derive = "0.38"
russh = "0.61"
russh-sftp = "2.3"
rustyline = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-escape = "0.1.5"
streamdown-parser = "0.1"
streamdown-render = "0.1"
subprocess = "1.1"
tao = { version = "0.35.3", default-features = false, features = ["x11", "rwh_06"] }
tera = "1.20.1"
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = "0.29.0"
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
wry = "0.55.1"
